--- a/sefi/Base.lproj/Main.storyboard
+++ b/sefi/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7528.3" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7518.3"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -1007,7 +1008,7 @@
         <!--Navigation Controller-->
         <scene sceneID="My1-cw-7ve">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4ij-eA-Zj8" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="NewOffersNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="4ij-eA-Zj8" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="2VB-98-VD4">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
